fixed issue with overlapping

--- a/src/scss/components/_overlay.scss
+++ b/src/scss/components/_overlay.scss
@@ -1,6 +1,6 @@
 .overlay {
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0px;
     bottom: 0px;
     right: 0px;
